:dart: fix bug with card overflow in views,incidents and polls

--- a/frontend/src/app/incidents/incidents.component.css
+++ b/frontend/src/app/incidents/incidents.component.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    max-height: 100vh;
 }
 
 .container .brief .search{
@@ -63,12 +64,13 @@
 }
 
 .container .brief .bottom .card .top-image{
-    height: 50%;
+    height: 6rem;
     width: 100%;
     border-radius: 10px 10px 0px 0px;
     overflow: hidden;
     position: relative;     /*REMEMBER THIS FORMULA FOR CONTAINING IMAGES*/
 }
+
 
 .container .brief .bottom .card .top-image img{
     position: absolute;
