--- a/frontend/src/app/polls/polls.component.css
+++ b/frontend/src/app/polls/polls.component.css
@@ -47,7 +47,7 @@
 }
 .container .brief .bottom{
     /* border: 1px solid; */
-    height: 100%;
+    height: 100vh;
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
