--- a/frontend/src/app/views/views.component.css
+++ b/frontend/src/app/views/views.component.css
@@ -56,7 +56,7 @@
 }
 
 .container .brief .bottom .card{
-    height: fit-content;
+    height: 12rem;
     /* border: 1px solid; */
     border-radius: 15px;
     /* padding: .4rem; */
@@ -64,7 +64,7 @@
 }
 
 .container .brief .bottom .card .top-image{
-    height: 50%;
+    height: 6rem;
     width: 100%;
     border-radius: 10px 10px 0px 0px;
     overflow: hidden;
